[package]
name = "enigma-core-enclave"
version = "0.1.3"
authors = ["Enigma <support@enigma.co>"]

[lib]
name = "enigmacoreenclave"
crate-type = ["staticlib"]

[features]
default = []

#[profile.release]
#debug = true

[dependencies]
enigma-types = { path = "../../enigma-types", default-features = false, features = ["sgx"] }
enigma-crypto = { path = "../../enigma-crypto", default-features = false, features = ["sgx", "asymmetric"] }
enigma-tools-t = { path = "../../enigma-tools-t" }
enigma-tools-m = { path = "../../enigma-tools-m", default-features = false, features = ["sgx"] }
enigma-runtime-t = { path = "../../enigma-runtime-t" }

lazy_static = {version = "=1.2.0", features = ["spin_no_std"] }
etcommon-hexutil = { version = "0.2", default-features = false }
etcommon-bigint = { version = "0.2", default-features = false, features = ["rlp"] }
rustc-hex = { version = "2.0", default-features = false }

pwasm-utils = { git = "https://github.com/enigmampc/wasm-utils.git", rev = "sgx-1.0.7", default-features = false }
parity-wasm = { git = "https://github.com/enigmampc/parity-wasm.git", branch = "enigma", default-features = false }
ethabi = { git = "https://github.com/enigmampc/ethabi.git", rev = "sgx-v6.1.0-v1.0.7", default-features = false}
error-chain = {git = "https://github.com/enigmampc/error-chain.git", rev = "sgx-0.12.0-v1.0.7",  default-features = false }
sputnikvm-network-classic = { git = "https://github.com/enigmampc/sputnikvm.git", rev = "enigma-next", default-features = false }
sputnikvm = { git = "https://github.com/enigmampc/sputnikvm.git", rev = "enigma-next", default-features = false }

serde_json = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.7" }
wasmi = { git = "https://github.com/enigmampc/wasmi", rev = "sgx-1.0.7" }


sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.7" }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.7" }
sgx_trts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.7" }
sgx_tunittest = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.7" }
