[package]
name = "enigma-principal-app"
version = "0.1.3"
authors = ["Enigma <support@enigma.co>"]
build = "build.rs"

[dependencies]
enigma-types = { path = "../../enigma-types" }
enigma-crypto = { path = "../../enigma-crypto" }
enigma-tools-u = { path = "../../enigma-tools-u" }
enigma-tools-m = { path = "../../enigma-tools-m" }

ethabi = "6.0.1"
etcommon-rlp = "0.2"
failure = "0.1.3"
rustc-hex = "1.0.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rmp-serde = "0.13.7"
structopt = "0.2.10"
url = "1.7.1"
colour = "0.2.1"
dirs = "1.0"
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev = "5503acb265eee45f58c0baaed8d0eca158388eb1", default-features = false, features=["http"] }
jsonrpc-http-server = "10.0"
log = "0.4.6"
log-derive = "0.2"
unicase = "=2.2.0"

sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.4" }
sgx_urts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.4" }

[dev-dependencies]
ethereum-types = "0.4"
