[package]
name = "enigma_principal_enclave"
version = "0.1.3"
authors = ["Enigma <support@enigma.co>"]

[lib]
name = "enigma_principal_enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
enigma-tools-t = {path = "../../enigma-tools-t"}
enigma-crypto = { path = "../../enigma-crypto", default-features = false, features = ["sgx", "asymmetric"] }

lazy_static = {version = "1.3.0", features = ["spin_no_std"] }

sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.6" }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.6" }
sgx_trts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.6" }
sgx_tse = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.6" }
sgx_tdh = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.6" }
sgx_tservice = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.6" }
sgx_alloc = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.6" }
sgx_tseal = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.6" }
sgx_rand = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.6" }
sgx_tunittest = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.6" }
