[package]
name = "enigma_principal_enclave"
version = "0.3.0"
authors = ["Enigma <support@enigma.co>"]

[lib]
name = "enigma_principal_enclave"
crate-type = ["staticlib"]

[dependencies]
enigma-tools-t = { path = "../../enigma-tools-t" }
enigma-tools-m = { path = "../../enigma-tools-m", default-features = false, features = ["sgx"] }
enigma-types = { path = "../../enigma-types", default-features = false, features = ["sgx"] }
enigma-crypto = { path = "../../enigma-crypto", default-features = false, features = ["sgx", "asymmetric"] }

lazy_static = {version = "1.3.0", features = ["spin_no_std"] }
ethabi = { git = "https://github.com/enigmampc/ethabi.git", rev = "8.0.1-sgx-1.0.9", default-features = false }
ethereum-types = { git = "https://github.com/enigmampc/parity-common.git", rev = "0.7.0-sgx-1.0.9", default-features = false }
rustc-hex = { version = "2.0", default-features = false }

sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
sgx_trts = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }
sgx_tunittest = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9" }