[package]
name = "contract"
version = "0.1.0"

[dependencies]
eng_wasm = {path = "../../../eng_wasm"}
eng_wasm_derive = {path = "../../../eng_wasm/derive"}

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
#TODO: overflow-checks = true # Think about this, it will increase size and performance but I think it might be crucial
