[package]
name = "contract"
version = "0.1.0"

[dependencies]
eng-wasm = {path = "../../../eng-wasm"}
eng-wasm-derive = {path = "../../../eng-wasm/derive"}

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
incremental = false # Because of bug: https://github.com/rust-lang/cargo/pull/6610
