[package]
name = "contract"
version = "0.1.0"

[dependencies]
eng-wasm = {path = "../../../eng-wasm"}
eng-wasm-derive = {path = "../../../eng-wasm/derive"}
enigma-types = { path = "../../../enigma-types" }
enigma-crypto = { path = "../../../enigma-crypto", default-features = false, features = ["asymmetric", "hash"] }
rustc-hex = "1.0.0" # 2.0.1?
serde_derive = "1.0.84"
serde = "1.0.84"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
