[package]
name = "contract"
version = "0.1.0"

[dependencies]
eng-wasm = {path = "../../../eng-wasm"}
eng-wasm-derive = {path = "../../../eng-wasm/derive"}
enigma-crypto = { path = "../../../enigma-crypto", default-features = false, features = ["asymmetric", "hash"] }
rustc-hex = "2.0.1"
serde = { version = "1.0", default-features = false, features=["serde_derive"] }

bitflags = "=1.0.4"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
