[package]
name = "contract"
version = "0.1.0"

[dependencies]
eng_wasm = {path = "../../../eng_wasm"}
eng_wasm_derive = {path = "../../../eng_wasm/derive"}
rustc-hex = "1.0.0" # 2.0.1?

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true # Think about this, it will increase size and performance but I think it might be crucial
