[package]
name = "contract"
version = "0.1.0"

[dependencies]
eng-wasm = "0.1"
eng-wasm-derive = "0.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
#overflow-checks = true # Think about this, it will increase size and performance but I think it might be crucial
