[package]
name = "contract"
version = "0.1.0"
authors = ["Aditya Palepu <apalepu23@gmail.com>"]

[dependencies]
eng-wasm = {path = "../../../eng-wasm"}
eng-wasm-derive = {path = "../../../eng-wasm/derive"}
rustc-hex = "1.0.0" # 2.0.1?
serde_derive = "1.0.84"
serde = "1.0.84"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true # Think about this, it will increase size and performance but I think it might be crucial
