[package]
name = "contract"
version = "0.1.0"
authors = ["Aditya Palepu <apalepu23@gmail.com>"]

[dependencies]
eng-wasm = "0.1"
eng-wasm-derive = "0.1"
rustc-hex = "2.0.1"
serde_derive = "1.0.84"
serde = "1.0.84"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
